# iriko-sales-agent

./: .env.example  .gitignore  DNG - אוטומציה.md  Dockerfile  Iroko-chatbot-green-API.json  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_messages.py  003_add_dlq.py  004_add_fallback_token_ref.py
app/: config.py  db.py  dependencies.py  main.py  redis_client.py
app/api/: health.py  webhooks.py
app/middleware/: rate_limiter.py
app/models/: base.py  dlq.py  message.py  tenant.py
app/observability/: logging.py  metrics.py  tracing.py
app/schemas/: greenapi.py
app/services/: agent_orchestrator.py  greenapi_client.py  ingress.py  memory.py  tenant_router.py
app/services/graphs/: factory.py  iroko_graph.py
app/services/tools/: book_meeting.py  escalate.py  qualify_lead.py  vector_search.py
app/utils/: whatsapp_format.py
app/workers/: dlq_replay.py  process_message.py
data/iroko/: flooring_products.md  product_info.md  system_prompt.md  חבילות ניקיון וטיפול לפרקט ולדק.csv  חומרי ניקוי ותחזוקה לפרקט שמן.csv  חומרי ניקוי לפרקט לכה ולמינציה.csv  מוצרים נלווים לפרקט.csv  ספוגים ותשתיות.csv  שמן ולכה לפרקט עץ.csv  שמן וצבע לדק עץ ולפרגולה.csv
data/pashutomazia/: system_prompt.md
docs/: PRD.md
scripts/: seed_tenants.py  seed_vector_store.py
tests/: conftest.py  test_agent_orchestrator.py  test_book_meeting.py  test_dlq.py  test_escalate.py  test_graph_factory.py  test_ingress.py  test_iroko_graph.py  test_memory.py  test_qualify_lead.py  test_rate_limiter.py  test_schemas.py  test_tenant_router.py
tests/fixtures/: greenapi_payloads.py
