[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadwise-sales-agent"
version = "0.1.0"
description = "Multi-tenant AI sales agent SaaS platform on WhatsApp"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # DB
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Cache / Queue
    "redis>=5.0.0",
    "arq>=0.26.0",

    # Agent / LLM
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "litellm>=1.40.0",

    # Vector DB
    "qdrant-client>=1.10.0",

    # Config
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",

    # Utilities
    "orjson>=3.10.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
